# mynote

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO  backend.dockerfile  build.rs  client.dockerfile  cross-compile.sh  frontend.dockerfile  gatsby.dockerfile  go.mod  go.sum  main.go  manifest.yaml  package.json  rust.dockerfile  server.dockerfile  tsconfig.json  vite.config.ts
auth/: Cargo.toml  auth.dto.go  auth.middleware.go  auth.module.go  auth.resolver.go  password.service.go  scopes.go  session.service.go  user.dto.go  user.resolver.go
auth/src/: auth.rs  dto.rs  error.rs  guard.rs  lib.rs  module.rs  resolver.rs  service.rs
auth/src/session/: mod.rs
backend/: .gitignore  Cargo.toml
backend/src/: config.rs  lib.rs  main.rs
backend/src/auth/: credential.rs  session.rs  signup.rs
backend/src/entity/: credential.rs  memo.rs  mod.rs  prelude.rs  user.rs
backend/src/migration/: m20220711_000001_create_table_user.rs  m20220711_000002_create_table_credential.rs  m20220714_000001_create_table_session_key.rs  mod.rs  tables.rs
backend/src/resolver/auth/: mutation.rs
backend/src/resolver/memo/: mod.rs
backend/src/resolver/user/: mod.rs
backend/src/routes/: api.rs  content.rs  health.rs  mod.rs
backend/src/routes/middlewares/: extract_session.rs
client/: .babelrc  .gitignore  Cargo.toml  gatsby-browser.tsx  gatsby-config.ts  index.html  package.json  pubspec.yaml  schema.graphql
client/android/app/: build.gradle
client/assets/: api.graphql
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: app.dart
client/lib/components/: avatar.dart  common_form.dart  editable_field.dart  layout.dart  list_item.dart  text_input.dart  text_input_screen.dart  web_image_selector.dart
client/lib/models/: connection.dart  connection.g.dart  note.dart  note.g.dart  user.dart  user.g.dart
client/lib/providers/: api_schema.dart  client.dart  current_user.dart  global.dart
client/lib/screens/: home.dart  loading.dart  login.dart  profile.dart  routes.dart  signup.dart
client/lib/screens/dashboard/: dashboard.dart  layout.dart  todo.dart
client/lib/screens/settings/: profile.dart  (+1 more)
client/linux/: CMakeLists.txt
client/locales/cn/: home.json  layout.json  memo.json  settings.json  signup.json
client/locales/en/: home.json  layout.json  settings.json  signup.json
client/macos/Runner.xcodeproj/: project.pbxproj
client/src/: lib.rs  login.rs  main.rs  note.rs  password.rs  routes.ts  types.ts
client/src/components/: currentAvatar.tsx  dashboard.tsx  layout.tsx  link.tsx  loading.tsx  navigationItem.tsx  tile.tsx
client/src/contexts/: client.rs  local_storage.rs  mod.rs  user.rs
client/src/hooks/: persistentState.tsx  session.tsx  translate.tsx
client/src/page/: loading.rs  mod.rs  welcome.rs
client/src/pages/: 404.tsx  home.rs  index.tsx  loading.rs  login.tsx  mod.rs  not_found.rs  report.tsx  settings.tsx  signup.tsx
client/src/providers/: client.tsx  currentUser.tsx
client/src/routes/: mod.rs
client/web/: index.html
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
crud/: Cargo.toml
crud/src/: authorize.rs  conversion.rs  count.rs  create.rs  cursor.rs  delete.rs  filter.rs  get.rs  hook.rs  lib.rs  list.rs  pagination.rs  sort.rs  stream.rs  update.rs
crud/src/db/: mod.rs
crud/src/filter/: apply_filter.rs  mod.rs  private.rs  undeleted.rs
crud/src/pagination/: mod.rs
crud/src/sorting/: apply_sorting.rs
db/: Cargo.toml  db.module.go  db.provider.go  test.db-shm  test.db-wal
db/migrations/: 20211230150535_user.down.sql  20211230150535_user.up.sql  20220103094148_session_key.down.sql  20220107100454_note.down.sql  20220107100454_note.up.sql  20220122070954_new_schema.sql  20220318154332_password.sql  20220319070152_universal.sql  20220328120315_password.sql  20220502081941_remove_lamport.sql  20220502084154_pw.sql  20220503022238_amend_updated_at.sql  20220506153449_passwords.sql  20220507131131_password_is_local.sql  20220509030929_peer.sql  20220512072359_pw_icon.sql  20220512072359_pw_peer_icon.sql
db/src/: lib.rs  migration.rs  module.rs
db/src/model/: mod.rs  note.rs  session_key.rs  user.rs
db/tests/: setup.rs  user.rs
dto/: Cargo.toml
dto/src/: lib.rs  note.rs  user.rs
entity/: Cargo.toml
entity/src/: credential.rs  lib.rs  memo.rs  note.rs  prelude.rs  session_key.rs  user.rs
entity/src/entity/: credential.rs  mod.rs  note.rs  password.rs  prelude.rs  user.rs
entity/src_old/: conversion.rs  password.rs  password_group.rs  peer.rs  prelude.rs  session_key.rs
gateway/: Cargo.toml
gateway/src/: main.rs
mynote-core/: Cargo.toml
mynote-core/src/: lib.rs
mynote-web/: Cargo.toml  build.rs
mynote-web/frontend/: package.json
mynote-web/frontend/src/: private.tsx
mynote-web/src/: conversion.rs  main.rs  resolver.rs
mynote-web/src/dto/: filter.rs  mod.rs  note.rs  user.rs
mynote-web/src/guard/: login_required.rs
note/: Cargo.toml  note.dto.go  note.module.go  note.resolver.go
note/src/: dto.rs  error.rs  filter.rs  lib.rs  module.rs  resolver.rs  service.rs  sorting.rs
old/libs/pubsub/: Cargo.toml
password/: Cargo.toml
password/src/: filter.rs  lib.rs  module.rs
server/: Cargo.toml  server.controller.go  server.module.go  server.provider.go
server/src/: args.rs  config.rs  lib.rs  main.rs  resolver.rs  tracing.rs
server/src/auth/: credential.rs  login.rs  mod.rs  session.rs  signup.rs
server/src/entity/: mod.rs  note.rs  prelude.rs  session_key.rs  user.rs
server/src/extension/: current_user.rs  mod.rs  utils.rs
server/src/migration/: m20220711_000001_create_table_user.rs  m20220711_000003_create_table_memo.rs  m20220711_000003_create_table_note.rs  m20220714_000001_create_table_session_key.rs  mod.rs  tables.rs
server/src/resolver/: mod.rs
server/src/routes/: api.rs  content.rs  error.rs  mod.rs  playground.rs  query_mutation.rs  subscription.rs
session/: Cargo.toml
session/src/: lib.rs  module.rs
user/: Cargo.toml
user/src/: dto.rs  lib.rs  module.rs  resolver.rs  user.rs
(+462 files in other folders)
