[package]
name = "notebook"
description = "Your private notebook"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["migration", "entity"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
migration = { path = "./migration" }
entity = { path = "./entity" }
dioxus = "0.3.0"
dioxus-router = "0.3.0"
log = "0.4.17"
sea-orm = { version = "0.10.6", features = [
    "macros",
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
] }
app-path = { path = "../app-path" }
thiserror = "1.0.38"
url = "2.3.1"
uuid = { version = "1.2.2", features = ["v4"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dioxus-desktop = "0.3.0"
env_logger = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.1"
paste = "1.0.9"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
dioxus-web = "0.3.0"
wasm-logger = "0.2.0"

#[patch.crates-io]
#dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "master" }
#dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", branch = "master" }
#dioxus-router = { git = "https://github.com/DioxusLabs/dioxus", branch = "master" }
#dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", branch = "master" }
