[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
db = { path = "../db" }
dto = { path = "../dto" }
async-graphql = { version = "^3", features = ["chrono"] }
chrono = "^0"
sea-orm = { version = "^0", default-features = false, features = [] }
jsonwebtoken = "^8"
rand = "^0"
serde = "^1"
async-trait = "^0"
