[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
chrono = "^0"
sea-orm = { version = "^0", default-features = false, features = [] }
jsonwebtoken = "^8"
rand = "^0"
serde = "^1"

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }
db = { path = "../db" }
