[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
sea-orm = { version = "^0", default-features = false, features = [] }

[dev-dependencies]
config = { path = "../config" }
db = { path = "../db" }
tokio = { version = "^1", features = ["full"] }
