[package]
name = "notebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65" }

crud = { git = "https://github.com/onichandame/crud-rs", version = "^0.1" }
tokio = { version = "^1", features = ["full"] }
clap = { version = "^3", features = ["derive", "env"] }
sea-orm = { version = "^0.9", features = [
    "runtime-tokio-native-tls",
    "with-chrono",
    "macros",
    "sqlx-postgres",
] }
async-graphql = { version = "^4", features = ["chrono", "tracing"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-opentelemetry = "^0.17"
opentelemetry = "^0.17"
warp = "^0.3"
async-graphql-warp = "^4"
serde = "^1"
serde_json = "^1"
jsonwebtoken = "^8"
rand = "^0.8"
chrono = "^0.4"
bcrypt = "^0.13"
async-trait = "^0.1"
futures = "0.3.24"
sha1 = "0.10.5"
dotenvy = "0.15.5"
[dependencies.sea-orm-migration]
version = "^0"
