[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schema = { path = "../schema" }
model = { path = "../model" }
tokio-graphql-ws = { git = "https://github.com/onichandame/tokio-graphql-ws" }
futures = "^0"
chrono = "^0"
futures-util = "^0"
serde_json = "^1"
serde = "^1"
async-trait = "^0"
