[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
stylist = { version = "0.10.1", features = ["yew", "yew_integration"] }
wasm-logger = "0.2.0"
web-sys = "0.3.59"
yew = "0.19.3"
yew-router = "0.16.0"
