[package]
name = "crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../macros" }
async-graphql = { version = "^3", features = ["chrono"] }
chrono = "^0"
base64 = "^0"
serde = "^1"
serde_json = "^1"

async-trait = "^0"
sea-orm = { version = "^0", default-features = false }
futures = "^0"
futures-util = "^0"
