[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "^0", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "migrate",
    "chrono",
    "time",
] }
sea-orm = { version = "^0", default-features = false, features = [
    "sqlx-sqlite",
] }
chrono = "^0"

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }

# patch sqlx for cross-compilation
[dependencies.openssl]
version = "*"
features = ["vendored"]
