[package]
name = "dto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
async-graphql = { version = "3.0.19", features = ["chrono"] }
sqlx = { version = "0.5", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "migrate",
    "chrono",
    "time",
] }
chrono = "0.4.19"

# patch sqlx for cross-compilation
[dependencies.openssl]
version = "*"
features = ["vendored"]
