[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "^0"
chrono = "^0"
serde = "^1"
async-recursion = "^1"
sea-orm = { version = "^0", default-features = false, features = [
    "with-chrono",
    "macros",
] }
