[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth = { path = "../auth" }
note = { path = "../note" }
db = { path = "../db" }
web = { path = "../web" }
tokio = { version = "1.15.0", features = ["full"] }
warp-embed = "0.4.0"
async-graphql = { version = "3.0.19", features = ["chrono"] }
async-graphql-warp = "3.0.19"
serde = "1.0.133"
serde_json = "1.0.74"
warp = "0.3.2"
