[package]
name = "note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth = { path = "../auth" }
db = { path = "../db" }
dto = { path = "../dto" }
async-graphql = { version = "3.0.19", features = ["chrono"] }
sqlx = { version = "0.5", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "migrate",
    "chrono",
    "time",
] }

# patch sqlx for cross-compilation
[dependencies.openssl]
version = "*"
features = ["vendored"]
