[package]
name = "note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth = { path = "../auth" }
model = { path = "../model" }
dto = { path = "../dto" }
async-graphql = { version = "3.0.19", features = ["chrono"] }
sea-orm = "^0"
thiserror = "1.0.30"
