[package]
name = "note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
crud = { path = "../crud" }
sea-orm = { version = "^0", default-features = false }
chrono = "^0"
tokio = { version = "^1", features = ["full"] }
tokio-graphql-ws = { git = "https://github.com/onichandame/tokio-graphql-ws" }
serde = "^1"
serde_json = "^1"
async-trait = "^0"

[dev-dependencies]
db = { path = "../db" }
config = { path = "../config" }
tokio = { version = "^1", features = ["full"] }
