[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
sea-orm = { version = "^0", default-features = false }

[dev-dependencies]
db = { path = "../db" }
config = { path = "../config" }
tokio = { version = "^1", features = ["full"] }
