[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
lapin = "2.1.1"
tokio = { version = "1.21.2", features = ["sync", "rt", "macros"] }
async-trait = "0.1.58"
anyhow = "1.0.66"
rand = "0.8.5"
async-stream = "0.3.3"
uuid = { version = "1.2.1", features = ["v4"] }
